[gd_scene load_steps=7 format=3 uid="uid://8xvdm4xxnb50"]

[ext_resource type="Script" path="res://scripts/object_scripts/disturb_bot.gd" id="1_7vlmn"]
[ext_resource type="PackedScene" uid="uid://dfmomxs21oih1" path="res://scenes/components/gluable_component.tscn" id="2_87m0h"]
[ext_resource type="PackedScene" uid="uid://c01lcudgwnk13" path="res://scenes/components/holdable_component.tscn" id="2_afwlw"]
[ext_resource type="PackedScene" uid="uid://buiqnucfpsdl8" path="res://scenes/components/interaction_component.tscn" id="2_navg4"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_er0w3"]
radius = 0.3
height = 1.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_pb41m"]
radius = 0.3
height = 1.0

[node name="DisturbBot" type="CharacterBody3D" groups=["portable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
script = ExtResource("1_7vlmn")

[node name="HoldableComponent" parent="." instance=ExtResource("2_afwlw")]

[node name="InteractionComponent" parent="." instance=ExtResource("2_navg4")]

[node name="GluableComponent" parent="." node_paths=PackedStringArray("interaction_component") instance=ExtResource("2_87m0h")]
interaction_component = NodePath("../InteractionComponent")

[node name="DisturbBotCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_er0w3")

[node name="DisturbBotMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
mesh = SubResource("CapsuleMesh_pb41m")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
debug_enabled = true

[node name="PathFindingTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="glued" from="GluableComponent" to="." method="_on_gluable_component_glued"]
[connection signal="unglued" from="GluableComponent" to="." method="_on_gluable_component_unglued"]
[connection signal="timeout" from="PathFindingTimer" to="." method="_on_path_finding_timer_timeout"]
